fix text overflowing (ovweflow-wrap), fix overwriting post properties when updating an already published post

--- a/styles/posts-page.scss
+++ b/styles/posts-page.scss
@@ -7,6 +7,9 @@
     }
 }
 .blog-content{
+    *{
+        overflow-wrap: break-word;
+    }
     
     .wp-caption-text{margin-top:10px!important;}
 
